restyles article h1s, fixed spacing problem on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,13 @@ main {
 }
 
 section {
-    margin: 80px 0;
+    margin-bottom: 80px;
+}
+
+article h1 {
+    font-size: 2.2em;
+    font-weight: 400;
+    line-height: 110%;
 }
 
 
